suppression jquery : new Datatable('selecteur', {

--- a/src/main/resources/templates/essaim/essaimAssociation.html
+++ b/src/main/resources/templates/essaim/essaimAssociation.html
@@ -13,7 +13,7 @@ $(document).ready(function() {
 			return confirm([[#{supprimeressaim}]]);
 		}
     });
-	const table = $('#associerRucheEssaim').DataTable({
+	const table = new DataTable('#associerRucheEssaim', {
         "dom": '<"toolbar">lftip',
         fnInitComplete: function(){
             $('div.toolbar').html(
