--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -18,7 +18,7 @@
 				}
 			}
 	    });		
-		$('#ruches').DataTable({
+		new DataTable('#ruches', {
 	        dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
 		    buttons: [
 	             'csv',
