--- a/src/main/resources/templates/evenement/evenementSucreListe.html
+++ b/src/main/resources/templates/evenement/evenementSucreListe.html
@@ -7,7 +7,7 @@
 <script th:src="@{/js/ruches/evenementListe.js}"></script>
 <script th:inline="javascript">
 $(document).ready(function() {
-    $('#evenementssucre').DataTable({
+    new DataTable('#evenementssucre', {
         order: [ [ 0, 'desc' ] ],
         dom: 'Blftip',
         buttons: [
