--- a/src/main/resources/templates/hausse/haussesListe.html
+++ b/src/main/resources/templates/hausse/haussesListe.html
@@ -3,10 +3,8 @@
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 $(document).ready(function() {
-    const table = $('#hausses').DataTable({
-    	
+    const table = new DataTable('#hausses', {
     	select: {style: 'multi+shift'},
-    	
         dom: 'Blftip',
         buttons: [
 	    	'csv',
