--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -4,7 +4,7 @@
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script>
 	$(document).ready(function() {
-		$('.datatable-tri').DataTable({
+		new DataTable('.datatable-tri', {
 			paging : false,
 			searching : false,
 			info : false
