--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -47,7 +47,7 @@ $(document).ready(function() {
 	$('.confirmationsupprime').on('click', function () {
         return confirm([[#{supprimerrecolteethausses}]]);
     });
-    $('#hausses').DataTable({
+    new DataTable('#hausses', {
         order: [ [ 1, 'asc' ], [ 0, 'asc' ] ] ,
     	rowGroup: {
             dataSrc: 1, // on groupe sur les ruches
