--- a/src/main/resources/templates/recolte/recoltesStatEssaim.html
+++ b/src/main/resources/templates/recolte/recoltesStatEssaim.html
@@ -3,7 +3,7 @@
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 $(document).ready(function() {
-    $('#recoltes').DataTable({
+    new DataTable('#recoltes', {
     	dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
 	    buttons: [
 	    	'csv',
