--- a/src/main/resources/templates/ruche/rucheTypesListe.html
+++ b/src/main/resources/templates/ruche/rucheTypesListe.html
@@ -4,7 +4,7 @@
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 $(document).ready(function() {
-    $('#ruches').DataTable({
+    new DataTable('#ruches', {
         dom: 'Blftip',
 	    buttons: [
 	    	'csv',
