--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -3,7 +3,7 @@
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 	$(document).ready(function() {
-		const table = $('#ruches').DataTable({
+		const table = new DataTable('#ruches', {
 	    	select: {style: 'multi+shift'},
 	        dom: 'Blftip',
 		    buttons: [
