--- a/src/main/resources/templates/rucher/rucherStatistiques.html
+++ b/src/main/resources/templates/rucher/rucherStatistiques.html
@@ -9,7 +9,7 @@ $(document).ready(function() {
     $('.popover-dismiss').popover({
         trigger: 'focus'
     });
-    $('#statistiques').DataTable({
+    new DataTable('#statistiques', {
     	dom: 'Blftip',
 	    buttons: [
 	    	'csv',
