--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -2,6 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+// https://developer.mozilla.org/en-US/docs/Web/API/Document/DOMContentLoaded_event
+/*
+function doSomething() {
+  console.info('DOM loaded');
+}
+
+if (document.readyState === 'loading') {  // Loading hasn't finished yet
+  document.addEventListener('DOMContentLoaded', doSomething);
+} else {  // `DOMContentLoaded` has already fired
+  doSomething();
+}
+*/
 $(document).ready(function() {
 	const table = new DataTable('#essaims', {
     	select: {style: 'multi+shift'},
@@ -37,6 +49,19 @@ $(document).ready(function() {
         }
 	}
     table.on( 'select deselect', updateLinks);
+    // https://stackoverflow.com/questions/14377590/queryselector-and-queryselectorall-vs-getelementsbyclassname-and-getelementbyid
+    // https://stackoverflow.com/questions/10693845/what-do-queryselectorall-and-getelementsby-methods-return
+    // $('.selection').on('click', function () {
+    /*
+    	const elements = document.getElementsByClassName('selection');
+    for (let i = 0; i < elements.length; i++) {
+    	  elements[i].on('click', function () {   //   .on  erreur !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    	    	if ($(this).attr("href") == "#") {
+    	    		alert([[#{selectessaimstraiter}]]);	
+    	    	}      
+    	    });
+   	}
+    */
     $('.selection').on('click', function () {
     	if ($(this).attr("href") == "#") {
     		alert([[#{selectessaimstraiter}]]);	
