--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org">
-<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<html lang="en" xmlns:th="https://www.thymeleaf.org"
+	xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
+<head
+	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 </head>
 <body>
 	<nav th:replace="include :: navbar"></nav>
 	<br />
 	<br />
 	<br />
-	<div th:fragment="logout" class="logout"
+	<div class="logout"
 		sec:authorize="isAuthenticated()">
-		<span th:text="#{connecte}"></span> : <span sec:authentication="name"></span> | Roles: <span
-			sec:authentication="principal.authorities"></span>
+		<span th:text="#{connecte}"></span> : <span sec:authentication="name"></span>
+		| <span th:text="#{roles}"></span> : <span sec:authentication="principal.authorities"></span>
 		<div>
 			<form action="#" th:action="@{/logout}" method="post">
 				<input type="submit" th:value="#{deconnexion}" />
@@ -22,9 +24,8 @@
 	<div class="row">
 		<header class="col jumbotron jumbotron-fluid">
 			<div class="container-fluid">
-				<h1 id="titre" class="display-4 text-primary" 
-					th:utext="${@environment.getProperty('accueil.titre')}">
-				</h1>
+				<h1 id="titre" class="display-4 text-primary"
+					th:utext="${@environment.getProperty('accueil.titre')}"></h1>
 			</div>
 		</header>
 	</div>
