--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -49,7 +49,7 @@
        			<a th:href="@{'/essaim/associe/'+${essaim.id}}"
        			  class="bi bi-box-arrow-in-down-right" th:title="#{associationruche}" aria-hidden="true"></a>
        			<a id="supprime" th:href="@{'/essaim/supprime/'+${essaim.id}}"
-       			  class="confirmation bi bi-trash" style="color:red" 
+       			  class="bi bi-trash" style="color:red" 
        			  th:title="#{supprimer}" aria-hidden="true"></a>
        			<a th:href="@{'/essaim/descendance/'+${essaim.id}}"
        			  class="bi bi-diagram-3" th:title="#{graphedescendance}" aria-hidden="true"></a>
