cusor: pointer sur icones span des barres d'outils

--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -43,7 +43,7 @@
 				<a th:href="@{'/essaim/modifie/'+${essaim.id}}"
 				  class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
 				&nbsp;
-				<span id="clone" class="bi bi-collection" th:title="#{cloner}" aria-hidden="true"></span>
+				<span id="clone" class="bi bi-collection cursorpointer" th:title="#{cloner}" aria-hidden="true"></span>
 				<a th:href="@{'/essaim/essaime/'+${essaim.id}}"
 				  class="bi bi-box-arrow-left" th:title="#{essaimer}" aria-hidden="true"></a>
        			<a th:href="@{'/essaim/associe/'+${essaim.id}}"
