--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -70,23 +70,23 @@
 				<a th:href="@{'/rucher/rapproche/Osm/'+${rucher.id}}"
 				  class="rapproche bi bi-arrows-angle-contract" th:title="#{rapprocher}"
 					aria-hidden="true"></a>
-				<span id="liste" class="liste bi bi-list-ul"
+				<span id="liste" class="liste bi bi-list-ul cursorpointer"
 					th:title="#{listeRuchesOrdonnees}" aria-hidden="true"></span>
-				<span id="listeplus" class="liste bi bi-list-stars"
+				<span id="listeplus" class="liste bi bi-list-stars cursorpointer"
 					th:title="#{listePlusRuchesOrdonnees}" aria-hidden="true"></span>
-				<span id="export-png" class="bi bi-filetype-png" th:title="#{exportPng}"
+				<span id="export-png" class="bi bi-filetype-png cursorpointer" th:title="#{exportPng}"
 					aria-hidden="true"></span>
 				<a id="image-download" download="map.png"></a>
-				<span id="export-gpx" class="bi bi-arrow-up-right-circle" th:title="#{exportGPX}"
+				<span id="export-gpx" class="bi bi-arrow-up-right-circle cursorpointer" th:title="#{exportGPX}"
 					aria-hidden="true"></span>
 				<a id="gpx-download"></a>	
-				<span id="export-kml" class="bi bi-arrow-up-right-square" th:title="#{exportKML}"
+				<span id="export-kml" class="bi bi-arrow-up-right-square cursorpointer" th:title="#{exportKML}"
 					aria-hidden="true"></span>
 				<a id="kml-download"></a>				
 				<span id="parcours-redraw"
-					class="bi bi-arrow-clockwise" th:title="#{parcoursRecalcul}"
+					class="bi bi-arrow-clockwise cursorpointer" th:title="#{parcoursRecalcul}"
 					aria-hidden="true"></span>				
-				<span id="export-pdf" class="bi bi-file-pdf"
+				<span id="export-pdf" class="bi bi-file-pdf cursorpointer"
 					th:title="#{exportPdf}" aria-hidden="true"></span>
 				<form style="display:inline;" class="form">
 					<select id="format">
