--- a/src/main/resources/static/css/ruches.css
+++ b/src/main/resources/static/css/ruches.css
@@ -97,3 +97,8 @@ div.dataTables_info {
 div.dataTables_paginate {
             padding: 0.1em 1.0em !important;
         }
+
+.cursorpointer {
+	cursor: pointer;
+}        
+        
