--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -74,7 +74,7 @@ $().ready(function() {
 				<a th:href="@{'/hausse/modifie/'+${hausse.id}}"
 				  class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
 				&nbsp;
-				<span id="clone" class="bi bi-collection" th:title="#{cloner}" aria-hidden="true"></span>
+				<span id="clone" class="bi bi-collection cursorpointer" th:title="#{cloner}" aria-hidden="true"></span>
       				<a id="supprime" th:href="@{'/hausse/supprime/'+${hausse.id}}"
       				  class="confirmation bi bi-trash" style="color:red" 
       				  th:title="#{supprimer}" aria-hidden="true"></a>&nbsp;
