--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -71,7 +71,7 @@ $().ready(function() {
 				<a th:href="@{'/ruche/modifie/'+${ruche.id}}"
 				  class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
 				&nbsp;
-        		<span id="clone" class="bi bi-collection" th:title="#{cloner}" aria-hidden="true"></span>
+        		<span id="clone" class="bi bi-collection cursorpointer" th:title="#{cloner}" aria-hidden="true"></span>
 				<a th:href="@{'/ruche/hausses/'+${ruche.id}}"
 				  class="bi bi-justify" th:title="#{ajoutRetraitHausses}" aria-hidden="true"></a>
        			<a th:href="@{'/ruche/rucher/'+${ruche.id}}"
