--- a/src/main/resources/templates/essaim/essaimCommentaireForm.html
+++ b/src/main/resources/templates/essaim/essaimCommentaireForm.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<head
+	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:replace="include :: jsdatetimepicker"></script>
 <link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include :: localejsdatetimepicker"></script>
@@ -8,9 +9,9 @@
 	$().ready(function() {
 		$("#commentaire").focus();
 		$("#evenementForm").validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
+			errorClass : 'erreur-form',
+			errorPlacement : function(error, element) {
+				error.insertBefore(element.closest('div'));
 			},
 			rules : {
 				date : {
@@ -43,10 +44,11 @@
 	</div>
 	<form action="#" th:action="@{'/evenement/essaim/sauve/'+${essaim.id}}"
 		method="post" id="evenementForm">
-		<input type="hidden" id="valeur" name="valeur" />
-		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIREESSAIM" />
+		<input type="hidden" id="typeEvenement" name="typeEvenement"
+			value="COMMENTAIREESSAIM" />
 		<div th:replace="includeForm :: date"></div>
 		<div th:replace="includeForm :: commentaire"></div>
+		<div th:replace="includeForm :: notifDelai"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:include="include::footer"></footer>
