evenementNotifListe.html liste des notifications

--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -152,6 +152,8 @@ $.extend( true, $.fn.dataTable.defaults, {
 							th:href="@{/evenement/hausse/listeRemplissageHausse}"></a></li>
 						<li><a class="dropdown-item" th:text="#{rucherucher}"
 							th:href="@{/evenement/rucher/listeRucheAjout}"></a></li>
+						<li><a class="dropdown-item" th:text="#{Notifications}"
+							th:href="@{/evenement/listeNotif}"></a></li>
 					</ul>
 				</li>
 				<li class="nav-item dropdown">	
