--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -33,10 +33,13 @@ $(document).ready(function() {
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
+					<th th:text="#{evenement}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{ruche}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{essaim}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{NotificationJoursAvant}"></th>
+					<th style="background-color:PaleGoldenRod" th:text="#{hausse}"></th>
+					<th style="background-color:LemonChiffon" th:text="#{JoursAvant}"></th>
+					<th style="background-color:LemonChiffon" th:text="#{actif}"></th>
 					<th style="background-color:LemonChiffon" th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
@@ -44,12 +47,15 @@ $(document).ready(function() {
 				<tr th:each="evenement : ${evenements}">
 					<td>
 						<a th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-							th:href="@{'/evenement/'+${evenement.id}}+'?type=sucre'"></a>
+							th:href="@{'/evenement/'+${evenement.id}}"></a>
 					</td>
+					<td th:text="#{${evenement.type}}"></td>
 					<td th:text="${evenement.ruche?.nom}"></td>
 					<td th:text="${evenement.essaim?.nom}"></td>
 					<td th:text="${evenement.rucher?.nom}"></td>
+					<td th:text="${evenement.hausse?.nom}"></td>
 					<td th:text="${evenement.valeur}"></td>
+					<td th:text="${actifs[evenementStat.index]} ? #{oui} : #{non}"></td>
 					<td th:text="${evenement.commentaire}"></td>
 				</tr>				
 			</tbody>
