--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -153,7 +153,7 @@ $.extend( true, $.fn.dataTable.defaults, {
 						<li><a class="dropdown-item" th:text="#{rucherucher}"
 							th:href="@{/evenement/rucher/listeRucheAjout}"></a></li>
 						<li><a class="dropdown-item" th:text="#{Notifications}"
-							th:href="@{/evenement/listeNotif}"></a></li>
+							th:href="@{/evenement/listeNotif/false}"></a></li>
 					</ul>
 				</li>
 				<li class="nav-item dropdown">	
