--- a/src/main/resources/templates/includeForm.html
+++ b/src/main/resources/templates/includeForm.html
@@ -25,8 +25,8 @@
 
 	<form action="#">
 		<div th:fragment="notifDelai" class="form-floating mb-3">
-			<input placeholder="" class="form-control" type="number" min="1"
-				step="1" id="valeur" name="valeur" /> <label class="form-label"
+			<input placeholder="" class="form-control" type="number"
+				id="valeur" name="valeur" /> <label class="form-label"
 				th:text="#{NotificationJoursAvant}" for="valeur"></label>
 		</div>
 		<div th:fragment="finTraitement" class="form-check">
