Notifications : diagramme de Gantt

--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<head
+	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 $(document).ready(function() {
 	const url = [[@{'/evenement/listeNotif/'}]] ;
@@ -28,48 +29,54 @@ $(document).ready(function() {
 	<br />
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col" th:text="#{Notifications}">
+			<div class="col">
+				<h1 class="item" th:text="#{Notifications}"></h1>
 			</div>
 			<div class="col">
-				<span class="padicons">
-       				<input type="checkbox" id="groupe" th:title="#{tous}" th:checked="${tous}" />
-       				<label for="tous" th:text="#{tous}"></label>
+				<a th:href="@{'/evenement/ganttNotif'}"> <span
+					class="bi bi-bar-chart-steps" th:title="#{Gantt}"
+					aria-hidden="true"></span>
+				</a> &nbsp; <span class="padicons"> <input type="checkbox"
+					id="groupe" th:title="#{tous}" th:checked="${tous}" /> <label
+					for="tous" th:text="#{tous}"></label>
 				</span>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped dt-responsive" id="evenementsnotif">
+		<table class="table table-bordered table-striped dt-responsive"
+			id="evenementsnotif">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
 					<th th:text="#{evenement}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{hausse}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{Persistant}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{JoursAvant}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{Fin}"></th>
-					<th style="background-color:lightskyblue" th:text="#{commentaire}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{essaim}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{hausse}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{Persistant}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{JoursAvant}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{Fin}"></th>
+					<th style="background-color: lightskyblue" th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="evenement : ${evenements}">
-					<td>
-						<a th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-							th:href="@{'/evenement/'+${evenement.id}}"></a>
-					</td>
+					<td><a
+						th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
+						th:href="@{'/evenement/'+${evenement.id}}"></a></td>
 					<td th:text="#{${evenement.type}}"></td>
 					<td th:text="${evenement.ruche?.nom}"></td>
 					<td th:text="${evenement.essaim?.nom}"></td>
 					<td th:text="${evenement.rucher?.nom}"></td>
 					<td th:text="${evenement.hausse?.nom}"></td>
-					<td th:text="${#strings.substring(evenement.valeur,0,1)} == '-' ? #{oui} : #{non}"></td>
+					<td
+						th:text="${#strings.substring(evenement.valeur,0,1)} == '-' ? #{oui} : #{non}"></td>
 					<td th:text="${jAvants[evenementStat.index]}"></td>
-					<td th:text="${#temporals.format(fin[evenementStat.index], 'yyyy/MM/dd HH:mm')}"></td>
+					<td
+						th:text="${#temporals.format(fin[evenementStat.index], 'yyyy/MM/dd HH:mm')}"></td>
 					<td th:text="${evenement.commentaire}"></td>
-				</tr>				
+				</tr>
 			</tbody>
 		</table>
 	</div>
