--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -53,6 +53,12 @@ $.extend( true, $.fn.dataTable.defaults, {
 <script th:fragment="d3-interpolate" th:src="@{/js/d3-interpolate.min-3.0.1.js}"></script>
 <script th:fragment="d3-scale-chromatic" th:src="@{/js/d3-scale-chromatic.min-3.0.1.js}"></script>
 
+<script th:fragment="jsgantt" th:src="@{/js/gantt-0.6.1/frappe-gantt.min.js}"></script>
+<script th:fragment="snapsvg" th:src="@{/js/snap.svg-min-0.5.1.js}"></script>
+<link th:fragment="cssgantt" rel="stylesheet" type="text/css" media="all"
+	th:href="@{/js/gantt-0.6.1/frappe-gantt.min.css}" />
+
+
 <script th:fragment="jsol" th:src="@{/js/ol-6.14.1/ol.js}"></script>
 <link th:fragment="cssol" rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/ol-6.14.1/ol.css}" /> 
